Created Utils module and moved FBPUser class to it.